WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206817
[WinCairo][curl] ASSERTION FAILED: sessionID != PAL::SessionID::defaultSessionID() in NetworkProcess since
r255067
https://bugs.webkit.org/show_bug.cgi?id=206817
Summary
[WinCairo][curl] ASSERTION FAILED: sessionID != PAL::SessionID::defaultSessio...
Fujii Hironori
Reported
2020-01-26 21:27:54 PST
[WinCairo][curl] ASSERTION FAILED: sessionID != PAL::SessionID::defaultSessionID() in NetworkProcess since
r255067
Since
r255067
(
Bug 206700
). NetworkProcess of WinCairo debug builds, WK2 is crashing at shutdown.
> ASSERTION FAILED: sessionID != PAL::SessionID::defaultSessionID()
Callstack:
> WTF.dll!WTFCrash() Line 305 C++ > WebKit2.dll!WTFCrashWithInfo(int __formal=571, const char * __formal=0x00007fffec38b9e8, const char * __formal=0x00007fffec38b9c0, int __formal=1101) Line 619 C++ > WebKit2.dll!WebKit::NetworkProcess::destroySession(PAL::SessionID sessionID={...}) Line 571 C++ > WebKit2.dll!WebKit::NetworkProcessMainCurl::platformFinalize() Line 41 C++ > WebKit2.dll!WebKit::AuxiliaryProcessMain<WebKit::NetworkProcess,WebKit::NetworkProcessMainCurl>(int argc=7, char * * argv=0x000001abfc289450) Line 71 C++ > WebKit2.dll!WebKit::NetworkProcessMain(int argc=7, char * * argv=0x000001abfc289450) Line 54 C++ > WebKitNetworkProcess.exe!main(int argc=7, char * * argv=0x000001abfc289450) Line 34 C++ > [External Code]
Attachments
Patch
(1.92 KB, patch)
2020-01-26 21:59 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-01-26 21:59:38 PST
Created
attachment 388825
[details]
Patch
Fujii Hironori
Comment 2
2020-01-26 22:31:49 PST
Comment on
attachment 388825
[details]
Patch Clearing flags on attachment: 388825 Committed
r255137
: <
https://trac.webkit.org/changeset/255137
>
Fujii Hironori
Comment 3
2020-01-26 22:31:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-01-26 22:32:15 PST
<
rdar://problem/58909522
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug