[WinCairo][curl] ASSERTION FAILED: sessionID != PAL::SessionID::defaultSessionID() in NetworkProcess since r255067 https://bugs.webkit.org/show_bug.cgi?id=206817

Reviewed by Darin Adler.

Since r255067 (Bug 206700), the assertion is failing in
NetworkProcess::destroySession while shutdown, which is ensuring
the destructing session isn't the default session.

Covered by existing tests.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::destroySession): Conditioned out the
assertion for curl port as well as Soup port does.

Canonical link: https://commits.webkit.org/219801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255137 268f45cc-cd09-0410-ab3c-d52691b4dbfc